--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "description": "A project for lazy loading and minification",
   "scripts": {
-    "build-css": "esbuild styles.css --minify --outfile=styles.min.css",
+   
     "build-js": "esbuild scripts.js --minify --outfile=scripts.min.js",
-    "build": "npm run build-css && npm run build-js"
+   
+    "postinstall": "npx esbuild --version || npm rebuild esbuild",
+    
+    "build": "npx esbuild styles.css --minify --outfile=styles.min.css && npx esbuild scripts.js --minify --outfile=scripts.min.js"
   },
   "devDependencies": {
-    "esbuild": "^0.19.2"
+    "esbuild": "^0.19.2",
+    "esbuild-wasm": "^0.24.0"
   },
   "dependencies": {
     "sharp": "^0.33.5"
   }
 }
+
+
+
